# structural_dynamics_model

./: .gemini.snapshot  .gitignore  CONFIG_SENSITIVITY.md  Makefile  README.md  a.txt  b.txt  c.txt  core.md  d.txt  e.txt  epsilon_invariance_principle.md  f.txt  g.txt  geminis-architectural-review.txt  h.txt  i.txt  integration_map.md  j.txt  k.txt  l.txt  logic.md  logic_extensions.md  logic_index.md  logic_thresholds.md  m.txt  n.txt  o.txt  p.txt  pyproject.toml  q.txt  quick_start.md  r.txt  requirements.txt  s.txt  t.txt  u.txt  v.txt  validation_report.md  w.txt  (+1 more)
agent/: NOTES.md  app.py  generate_rss.py  generate_text.py  generate_url.py  orchestrator.py  rename_stories.py  story_generator_base.py  uke_write_v2.1.md
docs/: MicroCK_v1.5.md  deferential_realism_core_v3.1.md  deferential_realism_paper.md  deferential_realism_paper_v2.md  diagnostic_integration_architecture.md  diagnostic_integration_architecture_old.md  dp001_epsilon_invariance_constraint_identity.md  galois_implementation.md  girard_implementation.md  grothendieck_computations.md  indexical_relativity.md  individual_belief_battery.md  invariant_first_meta_classification_index_logic_analysis.md  lawvere_naming_convention.md  logic.md  logic_divergence_audit.md  logic_extensions.md  logic_thresholds.md  mountain_nl_backfill_needed.md  noether_implementation.md  quantum_verification_report.md  two_hub_architecture.md  uke_a.md  uke_narrative.md  uke_r.md  wheeler_implementation.md
essays/: columbia_falsification_matrix.md  france_election_2027_essay.md  mandatropy_at_scale.md  the_digital_noose.md  (+7 more)
(+2472 files in other folders)
