[project]
name = "structural-dynamics-model"
version = "0.1.0"
description = "Dependency-aware pipeline for structural dynamics analysis"
authors = [
    {name = "cafebedouin", email = "cafebedouin@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
]

[tool.poetry]
package-mode = false  # <--- Moved here

[project.optional-dependencies]
stats = [
    "scipy",
    "scikit-learn",
    "statsmodels",
]
ai = [
    "google-genai",
    "anthropic",
]
